Try fixing illustrations being stretched on iPhone

--- a/website/src/framework/content-panel/content-panel.component.scss
+++ b/website/src/framework/content-panel/content-panel.component.scss
@@ -20,17 +20,36 @@
 }
 
 $number-of-lines: 20;
+$number-of-lines-mobile: 10;
 
 td-aspect-ratio {
     flex: 0 0 calc(($font-size-code * $line-height-code * $number-of-lines + 2px) * 16 / 9);
     max-width: 100%;
 
-    @media (max-width: $media-max-width-tablet) {
+    @media (min-width: $media-min-width-tablet) and (max-width: $media-max-width-tablet) {
         flex-basis: 476px;
+    }
+
+    @media (max-width: $media-max-width-mobile) {
+        height: calc($font-size-code * $line-height-code * $number-of-lines-mobile + 2px);
     }
 
     td-illustration {
         height: 100%;
+    }
+}
+
+td-illustration.cp-code-snippet {
+    flex: 0 0 calc(($font-size-code * $line-height-code * $number-of-lines + 2px) * 16 / 9);
+    max-width: 100%;
+    height: calc($font-size-code * $line-height-code * $number-of-lines + 2px);
+
+    @media (max-width: $media-max-width-tablet) {
+        flex-basis: 476px;
+    }
+
+    @media (max-width: $media-max-width-mobile) {
+        height: calc($font-size-code * $line-height-code * $number-of-lines-mobile + 2px);
     }
 }
 
